@@ -1097,3 +1097,4 @@ seen. gmtime warning still there
 - Added the TKline, TZline, and GZline commands to the documentation
 - Fixed bug in m_tkl_line causing segfaultage
 - Any reason why HOOKTYPE_SERVER_QUIT was being called for clients?
+- Fixed exit_client to do NOQUIT type thing for SQUITs
